fix: friends page color error in dark mode

--- a/src/scss/kr-dark.scss
+++ b/src/scss/kr-dark.scss
@@ -232,7 +232,7 @@ blockquote
     }
 }
 
-.linkpage li {
+.linkpage ul li {
     a h4 {
         color: var(--text);
     }
